# auth-snk

./: .gitignore  LICENSE  README.md  __main__.py  bootstrap.py  example.env  pyproject.toml
src/authSnk/: app.py  main.py
src/authSnk/controllers/: api.py  autenticacao.py  solucao.py
src/authSnk/database/: database.py  models.py
src/authSnk/database/crud/: log.py  solucao.py
src/authSnk/services/: autenticacao.py  solucao.py
src/authSnk/utils/: configLog.py  criptografia.py  database.py  paths.py
